[gd_scene load_steps=6 format=3 uid="uid://b6owu1lcf7nw"]

[ext_resource type="Script" path="res://Objects/Chest/Chest.gd" id="1_1ul1u"]
[ext_resource type="Texture2D" uid="uid://d21dq5gk3p48e" path="res://Sprites/Objects/locked_chest.png" id="1_q1p3u"]
[ext_resource type="Texture2D" uid="uid://bufopnj0pcgfq" path="res://Sprites/Objects/unlocked_chest.png" id="2_ymece"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n064e"]
size = Vector2(64, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42c2h"]
size = Vector2(64, 64)

[node name="Chest" type="RigidBody2D"]
collision_mask = 2
mass = 0.01
gravity_scale = 0.0
script = ExtResource("1_1ul1u")

[node name="Locked_Chest_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_q1p3u")

[node name="Chest_Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_n064e")

[node name="Interaction_Area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Interaction_Area"]
position = Vector2(0, 16)
build_mode = 1
polygon = PackedVector2Array(40, -24, 40, 16, 32, 16, 32, 24, -32, 24, -32, 16, -40, 16, -40, -24, -31.8342, -24, -32, -56, 32, -56, 32, -24)

[node name="Unlocked_Chest_Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ymece")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, 9.53674e-07)
scale = Vector2(3.2, 3.2)

[node name="mouse_Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_Area2D"]
shape = SubResource("RectangleShape2D_42c2h")

[connection signal="body_entered" from="Interaction_Area" to="." method="_on_interaction_area_body_entered"]
[connection signal="input_event" from="Interaction_Area" to="." method="_on_interaction_area_input_event"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="input_event" from="mouse_Area2D" to="." method="_on_mouse_area_2d_input_event"]
[connection signal="mouse_entered" from="mouse_Area2D" to="." method="_on_mouse_area_2d_mouse_entered"]
